CORE-6458: Fix point map flannel cutting off bottom of the words on the last row

--- a/app/styles/dataCards/feature-map-flannel.sass
+++ b/app/styles/dataCards/feature-map-flannel.sass
@@ -104,7 +104,7 @@ $flannel-max-height: 300px
 
   // Content from Successful Query
   .flannel-content
-    padding: 0.5rem 1.1rem 0.5rem 0.5rem
+    padding: 0.5rem 1.1rem 0.7rem 0.5rem
 
     .name
       font-weight: bold
